--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <figure><img src="./src/image/johns-hopkins-university-logo.png" width="225" height="46" onclick="scrollPosition(home)" style="cursor: pointer"/></figure>
       </div>
       <ul style="cursor: pointer">
-        <li><a onclick="scrollPosition(aboutme)">About Myself</a></li>
-        <li><a onclick="scrollPosition(Pandh)">Publications & Honors</a></li>
-        <li><a onclick="scrollPosition(Projects)">Projects</a></li>
-        <li><a onclick="scrollPosition(Research)">Research</a></li>
+        <li><a href="#aboutme">About Myself</a></li>
+        <li><a href="#Pandh">Publications & Honors</a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#Research" ">Research</a></li>
       </ul>
     </div>
   </div>
@@ -53,7 +53,7 @@
   <div class="container">
   <h1 class="section_name">Research</h1>
     <div class="col three">
-      <h1 class="icon"><img class="zoomjhu" src="./src/image/jhu.png" onclick="location.href='https://github.com/Sam3448/Cross-lingual-Information-Retrieval'"/></h1>
+      <h1 class="icon"><img class="zoomjhu" src="./src/image/jhu.png" onclick="location.href='https://github.com/Sam3448/elastic4clir'"/></h1>
       <h1 class="service">Using ElasticSearch for Cross-lingual Information Retrieval</h1>
       <p class="AuthorDate">Aug 2017 - Present</p>
     </div>
