--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="header">
     <div id="navigation-bar">
       <div id="logo">
-        <figure><img src="./src/image/johns-hopkins-university-logo.png" width="225" height="46" onclick="scrollPosition(home)" style="cursor: pointer"/></figure>
+        <figure><img src="./src/image/johns-hopkins-university-logo.png" width="225" height="46" onclick="location = '#home'" style="cursor: pointer"/></figure>
       </div>
       <ul style="cursor: pointer">
         <li><a href="#aboutme">About Myself</a></li>
