--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <h2>Sep 2017</h2>
     <div class="col one2">
       <p class="textForPandh">I'm a second-year Master student(2016 - ) in Information Security Institute at Johns Hopkins University.</p>
-      <p class="textForPandh">My main research interests are rooted in designing representation learning methods and efficient infromation retrieval system to solve Natural Language Processing related problems. I'm currently working on building an information retrieval system for <b>Cross-lingual Information Retrieval project</b>.</p>
+      <p class="textForPandh">My main research interests are rooted in designing representation learning methods and efficient infromation retrieval system to solve Natural Language Processing related problems. I'm currently working on building an information retrieval system for <b>Cross-lingual Information Retrieval project (CLIR)</b> named <b>JHU MATERIAL</b>, using Elasticsearch and Lucene.</p>
       <p class="textForPandh">My major at Johns Hopkins University is Information Security. So I've also accomplished several projects by designing and building effective defensing methods, most of which combined state-of-the-art machine learning methods with information security concepts and got great outcome.</p>
       <p class="textForPandh">Before enrolling this program, I obtained a B.E. in Communication Engineering from Beijing University of Posts and Telecommunications. Also I have interned in Natural Language Processing and Computational Social Science at Tsinghua University, focusing on developing network representation learning methods . </p>
     </div>
