--- a/home.html
+++ b/home.html
@@ -52,26 +52,31 @@
 <div class="section bg0" id="Research">
   <div class="container">
   <h1 class="section_name">Research</h1>
-    <div class="col three">
+
+    <div class="col fourresearch">
+      <h1 class="icon"><img class="zoomjhu" src="./src/image/jhu.png" onclick="location.href='https://github.com/Sam3448/PseudoFeedback'"/></h1>
+      <h1 class="service">Pseudo Relevance Feedback with Dense Word Embedding for IR</h1>
+      <p class="AuthorDate">Feb 2018 - Present</p>
+    </div>
+
+    <div class="col fourresearch">
       <h1 class="icon"><img class="zoomjhu" src="./src/image/jhu.png" onclick="location.href='https://github.com/Sam3448/elastic4clir'"/></h1>
       <h1 class="service">Using ElasticSearch for Cross-lingual Information Retrieval</h1>
-      <p class="AuthorDate">Aug 2017 - Present</p>
+      <p class="AuthorDate">Aug 2017 - Feb 2018</p>
     </div>
-    <div class="col three">
 
+    <div class="col fourresearch">
       <h1 class="icon"><img class="zoomtsinghua" src="./src/image/tsinghua.png" onclick="location.href='https://github.com/Sam3448/Online_DeepWalk'"/></h1>
-
       <h1 class="service">Online Max-Margin DeepWalk for Representation Learning</h1>
       <p class="AuthorDate">Feb 2016 - Jun 2016</p>
     </div>
-    <div class="responsivegroup"></div>
-    <div class="col three">
 
+    <div class="col fourresearch">
       <h1 class="icon"><img class="zoomtsinghua" src="./src/image/tsinghua.png" onclick="location.href='https://github.com/Sam3448/MMDW'"/></h1>
       <h1 class="service">MMDW: Discriminative Learning of Network Representation </h1>
       <p class="AuthorDate">Apr 2015 - Feb 2016</p>
     </div>
-    <div class="group"></div>
+
   </div>
 </div>
 <div class="section bg" id="Projects">
