--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
     <div class="container slidercontent">
       <figure><img class="icon" src="./src/image/icon.jpeg" width="100" height="100" onclick="location.href = 'https://www.linkedin.com/in/weicheng-zhang/'" style="cursor: pointer" /></figure>
       <h2 class="hero">Welcome To Sam's Website</h2>
-      <h3 class="hero">A Software Engineer and an ML Researcher</h2>
+      <h3 class="hero">Software Engineer & ML Researcher</h2>
       <div class="call" onclick="location.href='./src/resume/Resume_WeichengZhang.pdf'"><span>Resume</span></div>
     </div>
   </div>
