--- a/home.html
+++ b/home.html
@@ -83,35 +83,47 @@
 <div class="section bg" id="Projects">
   <div class="container">
     <h1>Projects</h1>
-    <h2></h2>
+
     <div class="col three bg nopad pointer">
-      <div class="imgholder"><img src="./src/image/speech_bubble.png" class="imgProject" onclick="location.href='https://github.com/Sam3448/Natural-Language-Processing'"></div>
-      <h1 class="feature2">Natural Language Processing</h1>
-      <p>2017</p>
-    </div>    
-    <div class="col three bg nopad pointer">
-      <div class="imgholder"><img src="./src/image/sa.png" class="imgProject" onclick="location.href='https://github.com/Sam3448/Security-Analytics'"></div>
-      <h1 class="feature2">Security Analytics</h1>
-      <p>2017</p>
+      <div class="imgholder"><img src="./src/image/spamFilter.png" class="imgProject" onclick="location.href='https://github.com/Sam3448/SpamFilter'"></div>
+      <h1 class="feature">Spam Filter through Deep Learning and Information Retrieval</h1>
+      <p>2018</p>
     </div>
+
     <div class="col three bg nopad pointer">
       <div class="imgholder"><img src="./src/image/anonymous.png" class="imgProject" onclick="location.href='https://github.com/Sam3448/SPCFinal'"></div>
       <h1 class="feature">De-anonymizing Attack and Defense to Social Networks</h1>
       <p>2017</p>
     </div>
 
+    <div class="col three bg nopad pointer">
+      <div class="imgholder"><img src="./src/image/speech_bubble.png" class="imgProject" onclick="location.href='https://github.com/Sam3448/Natural-Language-Processing'"></div>
+      <h1 class="feature2">Natural Language Processing</h1>
+      <p>2017</p>
+    </div>   
 
     <div class="group margin"></div>
+
+    <div class="col three bg nopad pointer">
+      <div class="imgholder"><img src="./src/image/sa.png" class="imgProject" onclick="location.href='https://github.com/Sam3448/Security-Analytics'"></div>
+      <h1 class="feature2">Security Analytics</h1>
+      <p>2017</p>
+    </div>
+
     <div class="col three bg nopad pointer">
       <div class="imgholder"><img src="./src/image/crypto2.png" class="imgProject" onclick="location.href='https://github.com/Sam3448/Cryptography-and-Coding'"></div>
       <h1 class="feature2">Cryptography and Coding</h1>
       <p>2017</p>
     </div>
+
     <div class="col three bg nopad pointer">
       <div class="imgholder"><img src="./src/image/twitter.png" class="imgProject" onclick="location.href='https://github.com/Sam3448/Zerofox'"></div>
       <h1 class="feature">Real-time Detection of Social Network Attacks</h1>
       <p>2016</p>
     </div>
+
+    <div class="group margin"></div>
+
     <div class="col three bg nopad pointer">
       <div class="imgholder"><img src="./src/image/wsn3.png" class="imgProject" onclick="location.href='https://github.com/Sam3448/WSN'"></div>
       <h1 class="feature">Using Power Levels to Infer Unauthorized Use in Wireless Sensor Nodes</h1>
