--- a/home.html
+++ b/home.html
@@ -156,6 +156,11 @@
     <h2>Honors</h2>
     <div class="col one_original">
       <img class="caledar"/ src="./src/image/trophy.png">
+      <h1 class="feature side">2018</h1>
+      <li class="textForPandh"> IARPA-MATERIAL project ranks high in competition with three companies and two unversities.</li>
+      <li class="textForPandh"> Graduating with 4 A+ in two years, GPA 4.0/4.0 for tech courses. Rank top 2%.</li>
+      <h1 class="feature side">2016</h1>
+      <li class="textForPandh"> Two A+ in one semester. GPA 4.0/4.0.</li>
       <h1 class="feature side">2015</h1>
       <li class="textForPandh"> Second Scholarship, listing at the top 10%</li>
       <li class="textForPandh">Honorable Mention in Mathematical Contest in Modeling, 2015</li>
