--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
 </div>
 <div class="section bg" id="Projects">
   <div class="container">
-    <h1>Projects</h1>
+    <h1 class="section_name">Projects</h1>
 
     <div class="col three bg nopad pointer">
       <div class="imgholder"><img src="./src/image/spamFilter.png" class="imgProject" onclick="location.href='https://github.com/Sam3448/SpamFilter'"></div>
@@ -137,7 +137,7 @@
 
 <div class="section bg2" id="Pandh">
   <div class="container">
-    <h1>Publications & Honors</h1>
+    <h1 class="section_name">Publications & Honors</h1>
     <h2>Publications</h2>
     <div class="col one_original">
       <img class="caledar"/ src="./src/image/calendar.png">
@@ -180,7 +180,7 @@
 
 <div class="section bg" id="aboutme">
   <div class="container">
-    <h1>About Me</h1>
+    <h1 class="section_name">About Me</h1>
     <h2>Sep 2017</h2>
     <div class="col one2">
       <p class="textForPandh">I'm a second-year Master student(2016 - ) in Information Security Institute at Johns Hopkins University.</p>
